<resources>
    <string name="app_name">aruuke_rakhmanova_01_4m</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Введите ваше имя</string>
    <string name="enterEmail">Введите электронную почту</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="click">Нажать</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>